# MapProjections

./: CMakeLists.txt  CMakelists.txt  README.md
.github/workflows/: cmake.yml
res/shaders/: azimuthal.frag.glsl  azimuthal.ll_to_xy.glsl  azimuthal.xy_to_ll.glsl  equirect.frag.glsl  equirect.ll_to_xy.glsl  equirect.xy_to_ll.glsl  fragment.glsl  hammer.ll_to_xy.glsl  hammer.xy_to_ll.glsl  mollweide.frag.glsl  mollweide.ll_to_xy.glsl  mollweide.xy_to_ll.glsl  robinson.ll_to_xy.glsl  robinson.xy_to_ll.glsl  vertex.glsl
src/: images.cpp  images.h  main.cpp  mapper.cpp  mapper.h  maps.cpp  maps.h  projection.cpp  projection.h  shaders.cpp  shaders.h
src/projections/: mollweide.cpp  mollweide.h  robinson.cpp  robinson.h
